Source/GdbAdapter/Generated/GDBMIParser.cs
// $ANTLR 3.1.2 GDBMI.g 2011-06-23 02:29:56

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162

		
	using System.Collections.Generic;
	//using Logging;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;


namespace  GdbAdapter.Parsers 
{
public partial class GDBMIParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"ASYNC_CLASS", 
		"C_STRING", 
		"COMMA", 
		"CONSOLE", 
		"EOM", 
		"EXEC", 
		"LOG", 
		"NL", 
		"NOTIFY", 
		"RESULT", 
		"RESULT_CLASS", 
		"STATUS", 
		"STRING", 
		"TARGET", 
		"TOKEN", 
		"WS", 
		"'['", 
		"'[]'", 
		"']'", 
		"'{'", 
		"'{}'", 
		"'}'"
    };

    public const int EOF = -1;
    public const int T__20 = 20;
    public const int T__21 = 21;
    public const int T__22 = 22;
    public const int T__23 = 23;
    public const int T__24 = 24;
    public const int T__25 = 25;
    public const int ASYNC_CLASS = 4;
    public const int C_STRING = 5;
    public const int COMMA = 6;
    public const int CONSOLE = 7;
    public const int EOM = 8;
    public const int EXEC = 9;
    public const int LOG = 10;
    public const int NL = 11;
    public const int NOTIFY = 12;
    public const int RESULT = 13;
    public const int RESULT_CLASS = 14;
    public const int STATUS = 15;
    public const int STRING = 16;
    public const int TARGET = 17;
    public const int TOKEN = 18;
    public const int WS = 19;

    // delegates
    // delegators



        public GDBMIParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public GDBMIParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        

    override public string[] TokenNames {
		get { return GDBMIParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "GDBMI.g"; }
    }

    		
    	public class GDBMIRecord : Dictionary<string, object>
    	{			
    		public string token = null;
    							
    		public override string ToString()
    		{
    			string values = "(";
    			foreach(KeyValuePair<string, object> pair in this) 
    				values += "'" + pair.Key + "' = '" + pair.Value + "', ";   
    			values += ")";
    		
    			return this.GetType().ToString() + ": token = '" + token + "' values = " + values;
    		}
    	}
    	
    	public class GDBMIResultRecord : GDBMIRecord
    	{
    		public enum ResultClass {none, done, running, connected, error, exit};
    		public ResultClass cls = ResultClass.none;
    		
    		public void SetClsFromString(string strCls)
    		{
    			switch(strCls)
    			{
    				case "done": cls = GDBMIResultRecord.ResultClass.done; break;
    				case "running": cls = GDBMIResultRecord.ResultClass.running; break;
    				case "connected": cls = GDBMIResultRecord.ResultClass.connected; break;
    				case "error": cls = GDBMIResultRecord.ResultClass.error; break;
    				case "exit": cls = GDBMIResultRecord.ResultClass.exit; break;
    				default: break;
    			}
    		}
    		
    		public override string ToString() 
    		{		
    			return this.GetType().ToString() + ": cls = " + cls + " " + base.ToString();
    		}
    	}
    	
    	public class GDBMIAsyncResultRecord : GDBMIRecord
    	{
    		public enum GDBMIAsyncResultRecordType {none, exc, status, notify};		
    		public enum AsyncClass {none, stopped, thread_group_created, thread_created, breakpoint};
    		
    		public AsyncClass cls = AsyncClass.none;
    		public GDBMIAsyncResultRecordType type = GDBMIAsyncResultRecordType.none;
    		
    		public void SetClsFromString(string strCls)
    		{
    			switch(strCls)
    			{
    				case "stopped": cls = GDBMIAsyncResultRecord.AsyncClass.stopped; break;
    				case "thread_group_created": cls = GDBMIAsyncResultRecord.AsyncClass.thread_group_created; break;
    				case "thread_created": cls = GDBMIAsyncResultRecord.AsyncClass.thread_created; break;
    				case "breakpoint": cls = GDBMIAsyncResultRecord.AsyncClass.breakpoint; break;
    				default: break;
    			}
    		}	
    		
    		public override string ToString() 
    		{		
    			return this.GetType().ToString() + ": cls = " + cls + " " + base.ToString();
    		}
    	}
    	
    	public class GDBMIStreamRecord
    	{
    		public enum GDBMIStreamRecordType {none, console, target, log};	
    		public GDBMIStreamRecordType type = GDBMIStreamRecordType.none;
    		public string str = null;
    		
    		public override string ToString() 
    		{
    			return this.GetType().ToString() + ": " + type + ": " + str;	
    		}
    	}
    	
    	public class GDBMIResponse
    	{
    		public List<GDBMIStreamRecord> stream = new List<GDBMIStreamRecord>();					
    		public List<GDBMIAsyncResultRecord> async = new List<GDBMIAsyncResultRecord>();			
    		public GDBMIResultRecord result = null;
    		
    		public override string ToString() 
    		{
    			string str = this.GetType().ToString() + ":\n";																						
    			foreach(GDBMIStreamRecord streamRecord in stream)
    				str += "\t" + streamRecord + "\n";					
    			foreach(GDBMIAsyncResultRecord asyncRec in async)
    				str += asyncRec + "\n";				
    			str += result + "\n";
    			
    			return str;
    		}
    	}
    	
    	public class Util
    	{
    		public static string Unescape(string str)
    		{
    			return str
    				.Replace("\\\\", "\\")
    				.Replace("\\\"", "\"")
    				.Replace("\\r", "\r")
    				.Replace("\\n", "\n")
    				.Replace("\\t", "\t");
    		}
    	}	
    	



    // $ANTLR start "output"
    // GDBMI.g:213:0: output returns [GDBMIResponse response] : ( out_of_band_record )* ( result_record )? EOF ;
    public GDBMIResponse output() // throws RecognitionException [1]
    {   
        GDBMIResponse response = default(GDBMIResponse);

        GDBMIParser.out_of_band_record_return out_of_band_record1 = default(GDBMIParser.out_of_band_record_return);

        GDBMIResultRecord result_record2 = default(GDBMIResultRecord);



        	response =  new GDBMIResponse();	

        try 
    	{
            // GDBMI.g:219:2: ( ( out_of_band_record )* ( result_record )? EOF )
            // GDBMI.g:219:2: ( out_of_band_record )* ( result_record )? EOF
            {
            	// GDBMI.g:219:2: ( out_of_band_record )*
            	do 
            	{
            	    int alt1 = 2;
            	    alt1 = dfa1.Predict(input);
            	    switch (alt1) 
            		{
            			case 1 :
            			    // GDBMI.g:220:3: out_of_band_record
            			    {
            			    	PushFollow(FOLLOW_out_of_band_record_in_output152);
            			    	out_of_band_record1 = out_of_band_record();
            			    	state.followingStackPointer--;

            			    			
            			    				if(((out_of_band_record1 != null) ? out_of_band_record1.stream : default(GDBMIStreamRecord)) != null)			
            			    					response.stream.Add(((out_of_band_record1 != null) ? out_of_band_record1.stream : default(GDBMIStreamRecord)));				
            			    				if(((out_of_band_record1 != null) ? out_of_band_record1.async : default(GDBMIAsyncResultRecord)) != null)
            			    					response.async.Add(((out_of_band_record1 != null) ? out_of_band_record1.async : default(GDBMIAsyncResultRecord)));
            			    			

            			    }
            			    break;

            			default:
            			    goto loop1;
            	    }
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements

            	// GDBMI.g:229:2: ( result_record )?
            	int alt2 = 2;
            	int LA2_0 = input.LA(1);

            	if ( (LA2_0 == RESULT || LA2_0 == TOKEN) )
            	{
            	    alt2 = 1;
            	}
            	switch (alt2) 
            	{
            	    case 1 :
            	        // GDBMI.g:229:0: result_record
            	        {
            	        	PushFollow(FOLLOW_result_record_in_output167);
            	        	result_record2 = result_record();
            	        	state.followingStackPointer--;


            	        }
            	        break;

            	}

            	 
            			//Logger.Instance.Debug("result_record");		
            			response.result = result_record2;		
            		
            	Match(input,EOF,FOLLOW_EOF_in_output180); 

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return response;
    }
    // $ANTLR end "output"


    // $ANTLR start "result_record"
    // GDBMI.g:240:0: result_record returns [GDBMIResultRecord val] : ( TOKEN )? RESULT RESULT_CLASS ( COMMA result )* ( WS )* NL ;
    public GDBMIResultRecord result_record() // throws RecognitionException [1]
    {   
        GDBMIResultRecord val = default(GDBMIResultRecord);

        IToken TOKEN3 = null;
        IToken RESULT_CLASS4 = null;
        GDBMIParser.result_return result5 = default(GDBMIParser.result_return);



        	val =  new GDBMIResultRecord();

        try 
    	{
            // GDBMI.g:246:2: ( ( TOKEN )? RESULT RESULT_CLASS ( COMMA result )* ( WS )* NL )
            // GDBMI.g:246:2: ( TOKEN )? RESULT RESULT_CLASS ( COMMA result )* ( WS )* NL
            {
            	// GDBMI.g:246:2: ( TOKEN )?
            	int alt3 = 2;
            	int LA3_0 = input.LA(1);

            	if ( (LA3_0 == TOKEN) )
            	{
            	    alt3 = 1;
            	}
            	switch (alt3) 
            	{
            	    case 1 :
            	        // GDBMI.g:247:3: TOKEN
            	        {
            	        	TOKEN3=(IToken)Match(input,TOKEN,FOLLOW_TOKEN_in_result_record206); 
            	        	 val.token = ((TOKEN3 != null) ? TOKEN3.Text : null); 

            	        }
            	        break;

            	}

            	Match(input,RESULT,FOLLOW_RESULT_in_result_record217); 
            	RESULT_CLASS4=(IToken)Match(input,RESULT_CLASS,FOLLOW_RESULT_CLASS_in_result_record221); 
            	 
            			val.SetClsFromString(((RESULT_CLASS4 != null) ? RESULT_CLASS4.Text : null));
            		
            	// GDBMI.g:254:2: ( COMMA result )*
            	do 
            	{
            	    int alt4 = 2;
            	    int LA4_0 = input.LA(1);

            	    if ( (LA4_0 == COMMA) )
            	    {
            	        alt4 = 1;
            	    }


            	    switch (alt4) 
            		{
            			case 1 :
            			    // GDBMI.g:255:3: COMMA result
            			    {
            			    	Match(input,COMMA,FOLLOW_COMMA_in_result_record233); 
            			    	PushFollow(FOLLOW_result_in_result_record235);
            			    	result5 = result();
            			    	state.followingStackPointer--;

            			    	 val[((result5 != null) ? result5.key : default(string))] = ((result5 != null) ? result5.val : default(object)); 

            			    }
            			    break;

            			default:
            			    goto loop4;
            	    }
            	} while (true);

            	loop4:
            		;	// Stops C# compiler whining that label 'loop4' has no statements

            	// GDBMI.g:257:2: ( WS )*
            	do 
            	{
            	    int alt5 = 2;
            	    int LA5_0 = input.LA(1);

            	    if ( (LA5_0 == WS) )
            	    {
            	        alt5 = 1;
            	    }


            	    switch (alt5) 
            		{
            			case 1 :
            			    // GDBMI.g:257:0: WS
            			    {
            			    	Match(input,WS,FOLLOW_WS_in_result_record246); 

            			    }
            			    break;

            			default:
            			    goto loop5;
            	    }
            	} while (true);

            	loop5:
            		;	// Stops C# compiler whining that label 'loop5' has no statements

            	Match(input,NL,FOLLOW_NL_in_result_record251); 

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return val;
    }
    // $ANTLR end "result_record"

    public class out_of_band_record_return : ParserRuleReturnScope
    {
        public GDBMIAsyncResultRecord async;
        public GDBMIStreamRecord stream;
    };

    // $ANTLR start "out_of_band_record"
    // GDBMI.g:261:0: out_of_band_record returns [GDBMIAsyncResultRecord async, \r\n\t\t\t\t\t\t\tGDBMIStreamRecord stream] : ( async_record | stream_record );
    public GDBMIParser.out_of_band_record_return out_of_band_record() // throws RecognitionException [1]
    {   
        GDBMIParser.out_of_band_record_return retval = new GDBMIParser.out_of_band_record_return();
        retval.Start = input.LT(1);

        GDBMIAsyncResultRecord async_record6 = default(GDBMIAsyncResultRecord);

        GDBMIStreamRecord stream_record7 = default(GDBMIStreamRecord);



        	retval.stream =  null;
        	retval.async =  null;

        try 
    	{
            // GDBMI.g:269:2: ( async_record | stream_record )
            int alt6 = 2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0 == EXEC || LA6_0 == NOTIFY || LA6_0 == STATUS || LA6_0 == TOKEN) )
            {
                alt6 = 1;
            }
            else if ( (LA6_0 == CONSOLE || LA6_0 == LOG || LA6_0 == TARGET) )
            {
                alt6 = 2;
            }
            else 
            {
                NoViableAltException nvae_d6s0 =
                    new NoViableAltException("", 6, 0, input);

                throw nvae_d6s0;
            }
            switch (alt6) 
            {
                case 1 :
                    // GDBMI.g:269:2: async_record
                    {
                    	PushFollow(FOLLOW_async_record_in_out_of_band_record272);
                    	async_record6 = async_record();
                    	state.followingStackPointer--;

                    	 
                    			retval.async =  async_record6; 
                    			//Logger.Instance.Debug("async_record");
                    		

                    }
                    break;
                case 2 :
                    // GDBMI.g:275:2: stream_record
                    {
                    	PushFollow(FOLLOW_stream_record_in_out_of_band_record284);
                    	stream_record7 = stream_record();
                    	state.followingStackPointer--;

                    	 
                    			retval.stream =  stream_record7; 
                    			//Logger.Instance.Debug("stream_record");
                    		

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "out_of_band_record"


    // $ANTLR start "async_record"
    // GDBMI.g:282:0: async_record returns [GDBMIAsyncResultRecord val] : ( exec_async_output | status_async_output | notify_async_output );
    public GDBMIAsyncResultRecord async_record() // throws RecognitionException [1]
    {   
        GDBMIAsyncResultRecord val = default(GDBMIAsyncResultRecord);

        GDBMIAsyncResultRecord exec_async_output8 = default(GDBMIAsyncResultRecord);

        GDBMIAsyncResultRecord status_async_output9 = default(GDBMIAsyncResultRecord);

        GDBMIAsyncResultRecord notify_async_output10 = default(GDBMIAsyncResultRecord);


        try 
    	{
            // GDBMI.g:284:2: ( exec_async_output | status_async_output | notify_async_output )
            int alt7 = 3;
            switch ( input.LA(1) ) 
            {
            case TOKEN:
            	{
                switch ( input.LA(2) ) 
                {
                case EXEC:
                	{
                    alt7 = 1;
                    }
                    break;
                case STATUS:
                	{
                    alt7 = 2;
                    }
                    break;
                case NOTIFY:
                	{
                    alt7 = 3;
                    }
                    break;
                	default:
                	    NoViableAltException nvae_d7s1 =
                	        new NoViableAltException("", 7, 1, input);

                	    throw nvae_d7s1;
                }

                }
                break;
            case EXEC:
            	{
                alt7 = 1;
                }
                break;
            case STATUS:
            	{
                alt7 = 2;
                }
                break;
            case NOTIFY:
            	{
                alt7 = 3;
                }
                break;
            	default:
            	    NoViableAltException nvae_d7s0 =
            	        new NoViableAltException("", 7, 0, input);

            	    throw nvae_d7s0;
            }

            switch (alt7) 
            {
                case 1 :
                    // GDBMI.g:284:2: exec_async_output
                    {
                    	PushFollow(FOLLOW_exec_async_output_in_async_record302);
                    	exec_async_output8 = exec_async_output();
                    	state.followingStackPointer--;


                    			val =  exec_async_output8;
                    			val.type = GDBMIAsyncResultRecord.GDBMIAsyncResultRecordType.exc;
                    		

                    }
                    break;
                case 2 :
                    // GDBMI.g:290:2: status_async_output
                    {
                    	PushFollow(FOLLOW_status_async_output_in_async_record314);
                    	status_async_output9 = status_async_output();
                    	state.followingStackPointer--;


                    			val =  status_async_output9;
                    			val.type = GDBMIAsyncResultRecord.GDBMIAsyncResultRecordType.status;
                    		

                    }
                    break;
                case 3 :
                    // GDBMI.g:296:2: notify_async_output
                    {
                    	PushFollow(FOLLOW_notify_async_output_in_async_record326);
                    	notify_async_output10 = notify_async_output();
                    	state.followingStackPointer--;


                    			val =  notify_async_output10;
                    			val.type = GDBMIAsyncResultRecord.GDBMIAsyncResultRecordType.notify;
                    		

                    }
                    break;

            }
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return val;
    }
    // $ANTLR end "async_record"


    // $ANTLR start "exec_async_output"
    // GDBMI.g:303:0: exec_async_output returns [GDBMIAsyncResultRecord val] : ( TOKEN )? EXEC async_output ;
    public GDBMIAsyncResultRecord exec_async_output() // throws RecognitionException [1]
    {   
        GDBMIAsyncResultRecord val = default(GDBMIAsyncResultRecord);

        GDBMIAsyncResultRecord async_output11 = default(GDBMIAsyncResultRecord);


        try 
    	{
            // GDBMI.g:305:2: ( ( TOKEN )? EXEC async_output )
            // GDBMI.g:305:2: ( TOKEN )? EXEC async_output
            {
            	// GDBMI.g:305:2: ( TOKEN )?
            	int alt8 = 2;
            	int LA8_0 = input.LA(1);

            	if ( (LA8_0 == TOKEN) )
            	{
            	    alt8 = 1;
            	}
            	switch (alt8) 
            	{
            	    case 1 :
            	        // GDBMI.g:305:3: TOKEN
            	        {
            	        	Match(input,TOKEN,FOLLOW_TOKEN_in_exec_async_output346); 

            	        }
            	        break;

            	}

            	Match(input,EXEC,FOLLOW_EXEC_in_exec_async_output350); 
            	PushFollow(FOLLOW_async_output_in_exec_async_output352);
            	async_output11 = async_output();
            	state.followingStackPointer--;

            	 val =  async_output11; 

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return val;
    }
    // $ANTLR end "exec_async_output"


    // $ANTLR start "status_async_output"
    // GDBMI.g:308:0: status_async_output returns [GDBMIAsyncResultRecord val] : ( TOKEN )? STATUS async_output ;
    public GDBMIAsyncResultRecord status_async_output() // throws RecognitionException [1]
    {   
        GDBMIAsyncResultRecord val = default(GDBMIAsyncResultRecord);

        GDBMIAsyncResultRecord async_output12 = default(GDBMIAsyncResultRecord);


        try 
    	{
            // GDBMI.g:310:2: ( ( TOKEN )? STATUS async_output )
            // GDBMI.g:310:2: ( TOKEN )? STATUS async_output
            {
            	// GDBMI.g:310:2: ( TOKEN )?
            	int alt9 = 2;
            	int LA9_0 = input.LA(1);

            	if ( (LA9_0 == TOKEN) )
            	{
            	    alt9 = 1;
            	}
            	switch (alt9) 
            	{
            	    case 1 :
            	        // GDBMI.g:310:3: TOKEN
            	        {
            	        	Match(input,TOKEN,FOLLOW_TOKEN_in_status_async_output371); 

            	        }
            	        break;

            	}

            	Match(input,STATUS,FOLLOW_STATUS_in_status_async_output375); 
            	PushFollow(FOLLOW_async_output_in_status_async_output377);
            	async_output12 = async_output();
            	state.followingStackPointer--;

            	 val =  async_output12; 

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return val;
    }
    // $ANTLR end "status_async_output"


    // $ANTLR start "notify_async_output"
    // GDBMI.g:313:0: notify_async_output returns [GDBMIAsyncResultRecord val] : ( TOKEN )? NOTIFY async_output ;
    public GDBMIAsyncResultRecord notify_async_output() // throws RecognitionException [1]
    {   
        GDBMIAsyncResultRecord val = default(GDBMIAsyncResultRecord);

        GDBMIAsyncResultRecord async_output13 = default(GDBMIAsyncResultRecord);


        try 
    	{
            // GDBMI.g:315:2: ( ( TOKEN )? NOTIFY async_output )
            // GDBMI.g:315:2: ( TOKEN )? NOTIFY async_output
            {
            	// GDBMI.g:315:2: ( TOKEN )?
            	int alt10 = 2;
            	int LA10_0 = input.LA(1);
